Upgrade to java 17 (#2760)
* Switch to codeql/v2
* upgrade maven maven-dependency-plugin to 3.3.0 to make it compatible with java17
* add add-opens flags to maven surefire
* Add-Opens flag for Manifest by pom